--- a/rcm_pro/public/css/rcm_pro.css
+++ b/rcm_pro/public/css/rcm_pro.css
@@ -1,11 +1,12 @@
-ul.customMenu >li>a,
+ul.customMenu>li>a,
 .sidebar-menu,
 .desk-sidebar,
 .hidden {
   display: none !important;
 }
-.form-sidebar{
-  display: block!important;
+
+.form-sidebar {
+  display: block !important;
 }
 
 ul {
@@ -14,33 +15,74 @@ ul {
   padding: 0;
 }
 
-ul li li>ul {
-  margin-left: 10px;
-}
-
 ul li a:hover {
   text-decoration: none;
 }
 
-ul li li a {
-  background: none;
+ul.customMenu li li>ul {
+  margin-left: 10px;
+}
+/* Lable 1 */
+ul.customMenu>li>ul>li>a {
+  font-weight: 500;
+  font-size: 15px;
+  color: #3498db;
+  margin: 10px 0 5px 0;
   display: block;
-  padding: 7px;
-  border-radius: 10px;
-  padding-left: 20px;
   position: relative;
+  padding-left: 20px;
 }
 
-ul li li a::before {
-  content: '●';
+ul.customMenu>li>ul>li>a::before {
+  content: "\f009";
+  font-family: FontAwesome;
   color: #333;
   font-size: 14px;
   position: absolute;
-  left: 5px;
+  left: 0px;
   top: 50%;
   transform: translateY(-50%);
 }
+/* Lable 2 */
+ul.customMenu>li>ul>li>ul>li>a {
+  font-weight: 500;
+  font-size: 13px;
+  color: #3498db;
+  margin: 10px 0 5px 0;
+  display: block;
+  position: relative;
+  padding-left: 20px;
+}
 
-ul li li a:hover {
-  background: #9bd1ff;
+ul.customMenu>li>ul>li>ul>li>a::before {
+  content: "\f147";
+  font-family: FontAwesome;
+  color: #333;
+  font-size: 14px;
+  position: absolute;
+  left: 0px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+/* Lable 3 */
+ul.customMenu>li>ul>li>ul>li>ul>li>a {
+  font-weight: 500;
+  font-size: 12px;
+  color: #f31313;
+  margin: 10px 0 5px 0;
+  display: block;
+  position: relative;
+  padding-left: 12px;
+}
+ul.customMenu>li>ul>li>ul>li>ul>li>a:hover {
+  color: #3498db;
+}
+ul.customMenu>li>ul>li>ul>li>ul>li>a::before {
+  content: "\f276";
+  font-family: FontAwesome;
+  color: #f31313;
+  position: absolute;
+  left: 0px;
+  top: 50%;
+  transform: translateY(-50%);
 }
