--- a/erptech_rcm/public/css/erptech_rcm.css
+++ b/erptech_rcm/public/css/erptech_rcm.css
@@ -16,3 +16,9 @@ button[data-fieldname="tare"] {
     margin-top: 23px !important;
     padding: 10px 20px !important;
 }
+
+button:disabled {
+    background-color: #ccc!important;
+    cursor: not-allowed;
+    opacity: 0.6;
+}
